examples/test/testpolicy2264.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2264
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key0: value24
      key31: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value1
      podSelector:
        matchLabels:
          key33: value41
          key23: value40
          key29: value47
